# ShellAgent

./: .gitignore  .gitmodules  README.md  custom_widget_info.json  folder_paths.py  pyproject.toml  requirements.txt  setup.py
.ci/MacOS_base_files/: install.sh  run.sh  start.sh
.ci/MacOS_base_files/install.app/Contents/: Info.plist
.ci/MacOS_base_files/start.app/Contents/: Info.plist
.ci/example_workflow/: example_workflow.json
.ci/linux_base_files/: install.sh  run.sh  start.sh
.ci/python_dependencies_wins/include/: patchlevel.h
.ci/python_dependencies_wins/libs/: _tkinter.lib  python3.lib  python310.lib
.ci/update/: update.py
.ci/update_windows/: update.bat  update.py  update_stable.bat
.ci/windows_base_files/: run.bat
.github/workflows/: build-web.yaml  deploy-to-cloud.yaml  package-and-upload-new-linux.yaml  package-and-upload-new-mac.yaml  package-and-upload-new-windows.yaml  package-and-upload.yaml  package-test.yaml  stable-release.yaml  storybook-test.yaml  sync-open-source-main.yaml  sync-open-source.yaml
assets/: public_key.pem
proconfig/core/: __init__.py  automata.py  block.py  chat.py  common.py  constant.py  exception.py  render.py  state.py  variables.py  workflow.py
proconfig/runners/: runner.py  utils.py
proconfig/utils/: cli_utils.py  code_runner.py  dag.py  expressions.py  misc.py  pytree.py  registry.py  widget_manager.py
proconfig/widgets/: __init__.py  base.py  utils.py
proconfig/widgets/imagen_widgets/: __init__.py  comfyui_widget.py
proconfig/widgets/language_models/: __init__.py  claude_widgets.py  gpt_widgets.py
proconfig/widgets/myshell_widgets/: __init__.py  base.py
proconfig/widgets/tools/: __init__.py  code_runner.py  dependency_checker.py
scripts/: install.sh  install_python.sh  install_torch_linux.sh  package_and_upload.sh  package_changed_files.sh  package_replace_files.sh
servers/: automata.py  base.py  comfy_runner.py  common.py  helper.py  main.py  manager.py  settings.py  tools.py  utils.py  workflow.py
web/: .editorconfig  .gitignore  .prettierignore  .prettierrc  commitlint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
web/.husky/: pre-commit  pre-push
web/.yalc/image-canvas/: .yalcignore  index.bundle.d.ts  index.bundle.js  index.css  model.d.ts  model.js  package.json  yalc.sig
web/.yalc/myshell-bundled-chat/: .yalcignore  index.bundle.d.ts  index.bundle.js  package.json  styles.css  yalc.sig
web/apps/storybook/: .eslintrc.json  package.json  tailwind.config.ts  tsconfig.json
web/apps/web/: .eslintrc.js  jest.config.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.spec.json  wallaby.js
web/python/: index.py
(+429 files in other folders)
