[tool.poetry]
name = "proconfig"
version = "0.1.0"
description = ""
authors = ["wl-zhao <zhaowl20@mails.tsinghua.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
json5 = "^0.9.25"
torchsde = "0.2.6"
einops = "^0.8.0"
transformers = ">=4.25.1"
safetensors = ">=0.4.2"
aiohttp = "^3.9.5"
pyyaml = "^6.0.1"
pillow = ">=9.5.0"
scipy = "^1.14.0"
tqdm = "^4.66.4"
psutil = "^6.0.0"
kornia = ">=0.7.1"
spandrel = "^0.3.4"
pydantic = "^2.8.2"
gitpython = "^3.1.43"
ninja = "^1.11.1.1"
pygithub = "^2.3.0"
addict = "^2.4.0"
blend-modes = "^2.1.0"
numpy = "1.25.2"
fastapi = "0.110.3"
pyexecjs = "^1.5.1"
opencv-python = "4.8.0.76"
insightface = "0.7.3"
onnxruntime-gpu = "1.15.1"
facexlib = "^0.3.0"
ftfy = "^6.2.0"
timm = "0.6.13"
rembg = {version = "2.0.57", extras = ["gpu"]}
pyopenssl = "24.1.0"
watchdog = "^4.0.1"
openai = "1.35.13"
segment-anything = "1.0"
yapf = "0.40.2"
supervision = "0.22.0"
inference-gpu = {extras = ["yolo-world"], version = "^0.15.1"}
inference = "^0.15.1"
omegaconf = "^2.3.0"
pytorch-lightning = "^2.3.3"
numexpr = "2.10.0"
lpips = "^0.1.4"
diffusers = ">=0.26.1"
xformers = "0.0.27.post2"
imageio-ffmpeg = "0.5.1"
simple-lama-inpainting = "^0.1.2"
clip-interrogator = "0.6.0"
poetry = "^1.8.3"
datasets = "2.19.0"
flet = "^0.23.2"
packaging = "23.1"
psd-tools = "1.8.30"
inference-cli = "^0.15.1"
cupy-cuda12x = "13.2.0"
flask = "3.0.3"
fuzzywuzzy = "^0.18.0"
color-matcher = "^0.5.0"
yacs = "^0.1.8"
prompt-toolkit = "^3.0.47"
onnx = "1.16.1"
enscons = "^0.30.0"
pytoml = "^0.1.21"
pbkdf2 = "^1.3"
apex = "^0.9.10.dev0"
scikit-build-core = "^0.10.1"
cmake = "^3.30.2"
llama-cpp-python = "^0.2.87"
ort-nightly-gpu = "^1.15.0.dev20230502003"
python-dotenv = "^1.0.1"
cloudpickle = "^3.0.0"
torchscale = "0.3.0"
requests = "2.31.0"
wget = "^3.2"
pilgram = "^1.2.1"
pilmoji = "^2.0.4"
emoji = "1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
