[tool.poetry]
name = "proconfig"
version = "0.2.0"
description = ""
authors = ["wl-zhao <zhaowl20@mails.tsinghua.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pyexecjs = "^1.5.1"
fuzzywuzzy = "^0.18.0"
cloudpickle = "^3.1.0"
pilmoji = "2.0.4"
emoji = "1.7.0"
albucore = "0.0.16"
pygit2 = "^1.16.0"
playwright = "^1.47.0"
psutil = "^6.0.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
easydict = "^1.13"
openai = "^1.51.2"
gputil = "^1.4.0"
websocket-client = "^1.8.0"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
